After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730844 - smb and sftp backends don't handle errors in set_attribute()
smb and sftp backends don't handle errors in set_attribute()
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
1.21.x
Other Linux
: Normal minor
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-27 17:28 UTC by Ross Lagerwall
Modified: 2014-05-30 06:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sftp: Fail properly if set_attribute type is wrong (930 bytes, patch)
2014-05-27 17:48 UTC, Ross Lagerwall
committed Details | Review
smb: Fail properly if set_attribute type is wrong (1.92 KB, patch)
2014-05-27 17:48 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2014-05-27 17:28:28 UTC
If the type is incorrect, the call to update attributes is executed anyway.
Comment 1 Ross Lagerwall 2014-05-27 17:48:22 UTC
Created attachment 277329 [details] [review]
sftp: Fail properly if set_attribute type is wrong

If given an invalid type when setting unix::mode in try_set_attribute,
don't try and change the mode after failing the job.
Comment 2 Ross Lagerwall 2014-05-27 17:48:27 UTC
Created attachment 277330 [details] [review]
smb: Fail properly if set_attribute type is wrong

If given an invalid type when setting time::modified in
do_set_attribute, don't try and change the mtime after failing the job.
Comment 3 Ondrej Holy 2014-05-29 12:09:25 UTC
Review of attachment 277329 [details] [review]:

Looks good, thanks!
Comment 4 Ondrej Holy 2014-05-29 12:17:27 UTC
Review of attachment 277330 [details] [review]:

It looks good either, thanks!
Comment 5 Ondrej Holy 2014-05-29 12:17:27 UTC
Review of attachment 277330 [details] [review]:

It looks good either, thanks!
Comment 6 Ross Lagerwall 2014-05-30 06:10:08 UTC
Pushed to master as a2c0a48 and gnome-3-12 as 41ee387.  Thanks for the reviews.